# garmin-dashboard

./: .enc.env  .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml
garmin_dashboard/: 01_init_creds.py  02_fetch_steps.py  auth.py  charts.py  frontend.py
